Fri Jan 27 08:58:54 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.8 released.

Thu Jan 26 20:38:47 UTC 2012  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Condition_T.cpp:

          In order to allow building with inlining on MacOSX Lion,
          Condition_T.cpp needs to explicitly include Time_Value.h. In many
          cases, Time_Value.h was being incidentally included, such as
          through Atomic_Op_GCC_T.cpp, but that is specifically excluded for
          Lion builds using the clang compiler.

Tue Jan 24 16:44:22 UTC 2012  Chip Jones  <jonesc@ociweb.com>

        * NEWS:
          Added information about IDL dependency generation.

Tue Jan 24 15:26:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/conv_lib.mpb:
          Fixed cleanup bug

Tue Jan 24 14:40:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Can't check mpc files, when they contain gnuace specific stuff they
          need tabs

Tue Jan 24 14:29:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Fixed problem

Tue Jan 24 13:52:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Also check mpc files for tabs

Tue Jan 24 13:48:49 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS2/HTTPU/httpu.mpc:
        * apps/JAWS2/JAWS/jaws2.mpc:
        * apps/JAWS3/jaws3/jaws3.mpc:
        * apps/gperf/tests/gperf_test.mpb:
        * bin/MakeProjectCreator/config/ace_bzip2.mpb:
        * bin/MakeProjectCreator/config/ace_fl.mpb:
        * bin/MakeProjectCreator/config/ace_fox.mpb:
        * bin/MakeProjectCreator/config/ace_openssl.mpb:
        * bin/MakeProjectCreator/config/ace_output.mpb:
        * bin/MakeProjectCreator/config/ace_qt.mpb:
        * bin/MakeProjectCreator/config/ace_tk.mpb:
        * bin/MakeProjectCreator/config/ace_x11.mpb: