@@ -1,9 +1,12 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.0.8 and ACE-6.0.9
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.0.7 and ACE-6.0.8
 ====================================================
 
-. Added support for MPC's new feature that creates dependency files for IDL 
+. Added support for MPC's new feature that creates dependency files for IDL
   files when generating '-type gnuace' projects. Turned off by default, it
-  can be enabled in a features file or on the command line with 
+  can be enabled in a features file or on the command line with
   '-features ace_idl_dependencies=1'.
 
 USER VISIBLE CHANGES BETWEEN ACE-6.0.6 and ACE-6.0.7
